# advent-of-code-2025

./: .gitignore  Cargo.toml  README.md  day1  day1.rs  day2  day2.rs  day3.rs  day4.py  day4.rs  day5.rs  day6.rs  day7.rs  flake.nix
