[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.11.0"

[[bin]]
name = "day1"
path = "day1.rs"

[[bin]]
name = "day2"
path = "day2.rs"

[[bin]]
name = "day3"
path = "day3.rs"

[[bin]]
name = "day4"
path = "day4.rs"

[[bin]]
name = "day5"
path = "day5.rs"

[[bin]]
name = "day6"
path = "day6.rs"
